--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
-/* your beautiful css styling goes here! */
+.enemy {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+}
 
-/* Note: an asteroid image is included in this repo.
-Feel free to use it if you like. */
-
+.game-board{
+  position: absolute;
+}
