Added draggable player node.

--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,11 @@
   position: absolute;
   background-image:url("stars.jpg");
 }
+
+.player{
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color:green;
+  position: absolute;
+}
