--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-  z-index: 100;
+  position: relative;
+  margin: 0;
 }
 
 .enemy {
@@ -23,4 +24,26 @@ body {
   border-radius: 50%;
   background-color:green;
   position: absolute;
+}
+
+.levelTwo{
+  position:absolute;
+  color:white;
+  height:200px;
+  font-size:200px;
+  height:200px;
+  z-index:101;
+  left:1400px;
+  width:3000px;
+}
+
+.wish{
+  position:absolute;
+  color:white;
+  height:200px;
+  font-size:200px;
+  height:200px;
+  z-index:101;
+  left:4000px;
+  width:3000px;
 }
